www/react: Fix long line wrapping in log viewers

--- a/www/react-base/src/components/LogViewer/LogViewerText.scss
+++ b/www/react-base/src/components/LogViewer/LogViewerText.scss
@@ -75,3 +75,7 @@
     }
   }
 }
+
+.bb-logviewer-text-row > span {
+  white-space: nowrap;
+}
